# Poll_Django

./: .gitignore  README.md
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/static/polls/: style.css
mysite/polls/templates/polls/: detail.html  index.html  question_detail.html  results.html
mysite/staticfiles/polls/: style.css
poll_django_poem/: pyproject.toml
