[tool.poetry]
name = "poll-django-poem"
version = "0.1.0"
description = ""
authors = ["jasonbrewster@zadv.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
django = "^5.0.6"
wagtail = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
